# stm32_cubemx_tca9548

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  Makefile  components.txt
.devcontainer/: .devcontainer.json  Dockerfile
components/: CMakeLists.txt
cubemx/: .mxproject  cubemx.ioc
cubemx/Core/Inc/: main.h
cubemx/Core/Src/: gpio.c  i2c.c  syscalls.c
main/: CMakeLists.txt  main.c  syscalls.c
make/: build.mk  common.mk  components.mk  cubemx.mk  flash.mk  linters.mk  target.mk  third_party.mk
requirements/: components.txt
scripts/: add_components.sh  clang_format.sh  clang_tidy.sh  remove_components.sh  submodule.sh  submodules.sh  update_components.sh
